gcc/testsuite/gdc.test/compilable/imports/a313.d
module imports.a313;

// adds private package imports
private import imports.b313;
// adds private package core
private import core.stdc.stdio;
// adds public alias cstdio
public alias cstdio = core.stdc.stdio;
