gcc/testsuite/gdc.test/fail_compilation/imports/a313.d
module imports.a313;

private import imports.b313;
private static import imports.b313;
private static import b313 = imports.b313;

private import imports.pkg313;

private import core.stdc.stdio;
